--- a/ListApp/ListApp.csproj
+++ b/ListApp/ListApp.csproj
@@ -144,7 +144,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="frog.jpg" />
+    <Resource Include="frog.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
